<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ms_background_default"
    tools:context="com.sebng.minesweeper.fragment.MainFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_margin="12dp"
        android:src="@drawable/ic_preview"
        android:contentDescription="@string/default_content_desc"/>

    <Button
        android:id="@+id/main__button_new_game"
        android:text="@string/main__new_game"
        style="@style/MS.Button.Main"/>

    <Button
        android:id="@+id/main__button_continue"
        android:text="@string/main__continue"
        style="@style/MS.Button.Main"
        android:visibility="gone"/>

</LinearLayout>
